# sanic-template

./: README.md  main.py  pyproject.toml  rqs.txt  sanic_hcaptcha.py  setup.py  upload.txt
sanic_template/: template.py
sanic_template.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/: test.html
