[tool.poetry]
name = "sanic-template"
version = "1.0.0a"
description = ""
authors = ["mc_fdc <Masato.04.11.2007@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sanic_template"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
